--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Welcome to the dutch Brawlcommunity!</span>
+                        <span class="name">Welcome to the Dutch Brawlhalla Community!</span>
                         <hr class="star-light">
                         <span class="skills">Soon to be updated (written on 17-09-2016)</span>
                     </div>
